// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList should render an empty cell when a property value doesn't exist 1`] = `
<div>
  <table
    class="ui celled striped table"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
        >
          Product Name
        </th>
        <th
          class=""
        >
          Color
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class=""
        >
          Foo
        </td>
        <td
          class=""
        >
          Bar
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class=""
        >
          Bizz
        </td>
        <td
          class=""
        >
          Buzz
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class=""
        >
          Sample
        </td>
        <td
          class=""
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ProductList should render correctly 1`] = `
<div>
  <table
    class="ui celled striped table"
  >
    <thead
      class=""
    >
      <tr
        class=""
      >
        <th
          class=""
        >
          Product Name
        </th>
        <th
          class=""
        >
          Color
        </th>
      </tr>
    </thead>
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class=""
        >
          Foo
        </td>
        <td
          class=""
        >
          Bar
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class=""
        >
          Bizz
        </td>
        <td
          class=""
        >
          Buzz
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
